--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,6 @@
         android:textSize="11dp"
         android:textColor="#A9A9A9"
         android:layout_marginTop="5dp"
-
         />
 
 
@@ -94,6 +93,7 @@
         app:layout_constraintBottom_toBottomOf="@id/search_bar"
         />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Meals_List"
         android:layout_width="0dp"
@@ -120,15 +120,12 @@
         />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RandomRecycle"
-        android:layout_width="0dp"
+        android:layout_width="252dp"
         android:layout_height="139dp"
         app:layout_constraintTop_toBottomOf="@id/TextRecpie"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-
-        />
+        android:layout_marginTop="10dp"/>
 
 
 
