--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="325dp"
     android:layout_height="160dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/shape_drawable"
+    android:backgroundTint="@android:color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/shape_drawable">
-
+    >
     <ImageView
         android:id="@+id/MealImage"
-        android:layout_width="150dp"
-        android:backgroundTint="#D9D9D9"
+        android:layout_width="315dp"
         android:layout_height="150dp"
-        android:background="@drawable/shape_drawable"
         app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="centerCrop"
+        android:backgroundTint="#312412"
+        android:background="@drawable/shape_drawable"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
-
     <TextView
         android:id="@+id/MealText"
-        android:layout_width="130dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"
-        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="30dp"
+        android:textSize="14sp"
         android:textColor="@color/white"
+        android:textStyle="bold"
         />
 
     <ImageButton
@@ -38,7 +41,7 @@
         android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="12dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="20dp"
         />
@@ -52,7 +55,7 @@
         android:backgroundTint="#FFE1B3"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="12dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="20dp"
         />
@@ -79,5 +82,4 @@
         app:layout_constraintBottom_toBottomOf="@id/SavedImageView"
         android:src="@drawable/union"
         />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
