--- a/app/src/main/res/layout/saved_fragment.xml
+++ b/app/src/main/res/layout/saved_fragment.xml
@@ -17,10 +17,16 @@
             android:layout_marginTop="30dp"
             />
 
-    <include
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/SavedRec"
+        android:layout_width="325dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/SavedImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
         />
-
     <ImageButton
         android:id="@+id/BackArrow"
         android:layout_width="48dp"
