--- a/app/src/main/res/layout/saved_item.xml
+++ b/app/src/main/res/layout/saved_item.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="325dp"
-    android:layout_height="160dp"
-    android:background="@drawable/shape_drawable"
-    android:backgroundTint="@android:color/transparent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <ImageView
-        android:id="@+id/MealImage"
-        android:layout_width="315dp"
-        android:layout_height="150dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="centerCrop"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="325dp"
+        android:layout_height="160dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="@drawable/shape_drawable"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-    <TextView
-        android:id="@+id/MealText"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="30dp"
-        android:textSize="14sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        />
+        android:backgroundTint="@android:color/transparent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        >
+        <ImageView
+            android:id="@+id/MealImage"
+            android:layout_width="315dp"
+            android:layout_height="150dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop"
+            android:backgroundTint="#312412"
+            android:background="@drawable/shape_drawable"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+        <TextView
+            android:id="@+id/MealText"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="30dp"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
