--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -17,7 +17,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/EmailEdit"
         android:layout_width="345dp"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         android:layout_marginTop="60dp"
         android:hint="Email"
         app:circularflow_defaultRadius="6dp"
@@ -28,14 +28,14 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/EmailEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/PasswordEdit"
         android:layout_width="345dp"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         android:layout_marginTop="40dp"
         android:hint="Password"
 
@@ -46,8 +46,10 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/PasswordEditText"
+            android:inputType="textPassword"
+            android:ellipsize="start"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
