--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -17,7 +17,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/EmailEdit"
         android:layout_width="345dp"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         android:layout_marginTop="40dp"
         android:hint="Email"
         app:circularflow_defaultRadius="6dp"
@@ -35,7 +35,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/PassEdit"
         android:layout_width="345dp"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         android:layout_marginTop="30dp"
         android:hint="Password"
         app:circularflow_defaultRadius="6dp"
@@ -46,6 +46,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/PassEditText"
             android:layout_width="match_parent"
+            android:inputType="textPassword"
+            android:ellipsize="start"
             android:layout_height="wrap_content"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -53,7 +55,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/PassConEdit"
         android:layout_width="345dp"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         android:layout_marginTop="30dp"
         android:hint="Password Confirm"
         app:circularflow_defaultRadius="6dp"
@@ -64,6 +66,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/PassConEditText"
             android:layout_width="match_parent"
+            android:inputType="textPassword"
+            android:ellipsize="start"
             android:layout_height="wrap_content"
             />
     </com.google.android.material.textfield.TextInputLayout>
